--- a/public/css/bootstrap_customised.css
+++ b/public/css/bootstrap_customised.css
@@ -79,6 +79,11 @@
     border-color: #E80F88;
 }
 
+.card {
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+}
+
 
 a {
     color: #E80F88;
