--- a/views/cards/show30shuffle.ejs
+++ b/views/cards/show30shuffle.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=no">
-  <title>Kartičky</title>
+  <title>Kartičky Shuffle</title>
   <!-- META TAGS -->
   <meta name="description"               content="Tisíce interaktivních právnických kartiček zdarma. Připrav se na zkoušky zábavnou formou!">
   <meta name="author"                    content="Chilero s. r. o.">
@@ -45,17 +45,14 @@
     <nav class="navbar bg-white" style="border-bottom: 1px solid #EEEEEE;" id="card-nav">
       <div class="container">
         <ul class="navbar-nav">
-          <li><a href="/category/<%= section.category %>" class="back-link"><i
+          <li><a href="/category/<%= category.name %>" class="back-link"><i
                 class="fas fa-chevron-left me-2 mb-2"></i>Zpět na předmět</a></li>
           <li>
-            <p class="m-0"><small id="sectionId" name="<%= section._id %>">
-              <span class="nezobrazovat-na-mobilu"><%= section.name %></span>
+            <p class="m-0"><small id="categoryId" name="<%= category._id %>">
+              <span class="nezobrazovat-na-mobilu">Sada náhodných kartiček z předmětu <%= category.text %></span>
             </p></small>
           </li>
         </ul>
-        <% if (xmas && currentUser && !currentUser.isPremium) { %>
-          <a href="/vanoce" target="_blank"><img src="/img/xmas_gift.png" alt="" style="max-width: 40px;margin-right: 10px;"></a>
-        <% } %>
       </div>
     </nav>
 
@@ -67,7 +64,7 @@
         <div class="col-lg-2 mb-3 zobrazovat-jen-na-mobilu">
           <div class="card d-flex flex-row justify-content-center align-items-center border-grey">
             <div class="card-body text-center">
-              <p class="text-muted text-smaller mb-1">Kartička <span id="progressCardNumMobile"><span id="progressNumMobile">0</span> z <%= section.cards.length %>
+              <p class="text-muted text-smaller mb-1">Kartička <span id="progressCardNumMobile"><span id="progressNumMobile">0</span> z <span class="cards-length-span">20</span>
               </p>
               <div class="progress">
                   <div class="progress-bar bg-danger" role="progressbar" style="width:0%" id="progressBarMobile">
@@ -116,10 +113,10 @@
             <div class="card-body text-center">
               <div class="card-body category-box d-flex flex-column align-items-center justify-content-center pt-1">
                 <div class="rounded-circle icon-background-medium d-flex justify-content-center align-items-center">
-                  <img src="/img/<%= categoryIcon %>" class="img-fit" alt="" />
+                  <img src="/img/<%= category.icon %>" class="img-fit" alt="" />
                 </div>
               </div>
-              <p class="text-muted text-smaller">Kartička <span id="progressCardNumMac"><span id="progressNumMac">0</span> z <%= section.cards.length %>
+              <p class="text-muted text-smaller">Kartička <span id="progressCardNumMac"><span id="progressNumMac">0</span> z <span class="cards-length-span">20</span>
               </p>
               <div class="progress mb-2">
                   <div class="progress-bar bg-danger" role="progressbar" style="width:0%" id="progressBarMac">
@@ -150,12 +147,15 @@
       <div class="row" id="front-menu-row">
         <div class="col-lg-6 offset-lg-2">
           <div class="front-menu d-flex justify-content-between align-items-center border-grey">
-            <a href=""></a>
+            <div class="d-flex" style="min-width: 5rem;">
+              <div class="chevron-back-div">
+                <a href="#" class="chevron-back mt-1" id="btn-predchozi-front"><i class="fas fa-chevron-left"></i></a>
+              </div>
+            </div>
             <div class="">
-              <a href="#" class="btn btn-lg btn-outline-danger disabled" id='btn-predchozi-front'><i class="fas fa-chevron-left"></i></a>
               <a href="#" class="btn btn-lg btn-outline-danger disabled" id='btn-otocit'>Otočit</a>
             </div>
-            <a href=""></a>
+            <div class="disabled" style="min-width: 5rem; opacity: 0">X</div>
           </div>
         </div>
       </div>
@@ -164,15 +164,20 @@
       <div class="row hide" id="back-menu-row">
         <div class="col-lg-6 offset-lg-2">
           <div class="back-menu d-flex justify-content-between align-items-center border-grey">
-            <div id="star-div">
-              <div id="save-star" name="#" class="save-star" style="cursor:pointer"><i class="far fa-star fa-lg"></i></div>
+            <div class="d-flex" style="min-width: 5rem;">
+              <div class="chevron-back-div">
+                <a href="#" class="chevron-back mt-1" id="btn-predchozi-back"><i class="fas fa-chevron-left"></i></a>
+              </div>
+              <div id="star-div">
+                <div id="save-star" name="#" class="save-star" style="cursor:pointer"><i class="far fa-star"></i></div>
+              </div>
             </div>
             <div>
-              <a href="#" class="btn btn-lg btn-danger easy-btn" id="btn-predchozi-back"><i class="fas fa-chevron-left"></i></a>
-              <a href="#" class="btn btn-lg btn-danger easy-btn" id="btn-dalsi">Další</a>
+              <a href="#" class="btn btn-lg btn-outline-danger easy-btn" id="btn-dont-know" style="min-width: 5rem;"><i class="far fa-thumbs-down"></i></a>
+              <a href="#" class="btn btn-lg btn-danger easy-btn" id="btn-know" style="min-width: 5rem;"><i class="far fa-thumbs-up"></i></a>
             </div>
-            <div id="rotate-div">
-              <a href="#" id="rotate-back" class="rotate-icon"><i class="fas fa-sync-alt fa-lg"></i></a>
+            <div id="rotate-div" style="min-width: 5rem">
+              <a href="#" id="rotate-back" class="rotate-icon"><i class="fas fa-sync-alt"></i></a>
             </div>
           </div>
         </div>
@@ -219,7 +224,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
-      <script src="/js/card20.js"></script>
+      <script src="/js/card30shuffle.js"></script>
       <!--element for JS properly working while loading data-->
       <div id="data-loaded-wrapper">
         <div id="data-loaded"></div>
