--- a/views/questions/reachedLimit.ejs
+++ b/views/questions/reachedLimit.ejs
@@ -5,12 +5,12 @@
             <div class="card text-center p-4">
                 <div class="row">
                     <div class="col-12 mt-4">
-                        <i class="fas fa-lock green-check"></i>
+                        <i class="fas fa-crown golden" style="font-size: 5rem;"></i>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12 mt-4 mb-2">
-                        <h3>Otázky zdarma byly vyčerpány</h3>
+                        <h3>Získej neomezený přístup k testovým otázkám</h3>
                     </div>
                 </div>
                 <div class="row">
@@ -21,7 +21,7 @@
                 </div>
                 <div class="row mb-3 mt-3">
                     <div class="col-12">
-                        <a href="/premium" class="btn btn-lg btn-danger">Zjistit více</a>
+                        <a href="/premium" class="btn btn-lg btn-warning">Chci studovat bez omezení</a>
                     </div>
                 </div>
             </div>
