--- a/public/css/question.css
+++ b/public/css/question.css
@@ -23,6 +23,14 @@
     padding: 1rem;
 }
 
+.opacity-0 {
+    opacity: 0;
+}
+
+.opacity-1 {
+    opacity: 1;
+}
+
 .question-card {
     width: 100%;
     height: 350px;
