--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -39,6 +39,14 @@
                     </div>
                     <hr />
                     <div class="col-4 fw-bold d-flex align-items-center">
+                        <p>Denní cíl</p>
+                    </div>
+                    <div class="col-8 d-flex justify-content-between align-items-center">
+                        <%= user.dailyGoal %> bodů
+                        <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#modal-dailyGoal" style="margin-bottom: 5px">Změnit</button>
+                    </div>
+                    <hr />
+                    <div class="col-4 fw-bold d-flex align-items-center">
                         <p>Fakulta</p>
                     </div>
                     <div class="col-8 d-flex justify-content-between align-items-center">
@@ -376,6 +384,30 @@
                 <input type="text" class="form-control bordered" id="nickname" name="nickname" value="<%= currentUser.nickname %>" maxlength="16" required>
                 <p class="text-small text-muted p-2 mb-0">maximálně 16 znaků</p>
                 <div class="d-flex justify-content-center">
+                    <button class="btn btn-danger" type="submit">
+                        Uložit
+                    </button>
+                </div>
+            </div>
+            
+        </form>
+    </div>
+    </div>
+</div>
+
+<!-- Set nickname modal -->
+<div class="modal fade" id="modal-dailyGoal" tabindex="-1" aria-labelledby="modalWarning" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title">Nastavit denní cíl</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <form action="/auth/user/changeDailyGoal" method="POST" class="m-lg-3 m-2">
+            <div class="modal-body">
+                <p class="text-center">Každá zodpovězená otázka nebo nastudovaná kartička se počítá za jeden bod. Tvůj denní cíl musí být <b>nejméně 10 bodů</b>.</p>
+                <input type="number" class="form-control bordered" id="dailyGoal" name="dailyGoal" min="10" value="<%= currentUser.dailyGoal %>" required>
+                <div class="d-flex justify-content-center mt-3">
                     <button class="btn btn-danger" type="submit">
                         Uložit
                     </button>
