--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -58,7 +58,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 offset-md-2 text-center my-5">
-                    <h1 class="mb-4">Naše balíčky</h1>
+                    <h1 class="mb-4"><i class="fas fa-crown golden"></i> Naše balíčky</h1>
                     <p class="fs-5">Většina opakovacích kartiček je dostupná zdarma s balíčkem Free. Lze si však zvolit také balíček Premium s měsíční, pololetní nebo roční platbou. V rámci balíčku Premium získáš více než 3 000 prémiových kartiček, neomezených přístup k testovým otázkám a další funkce.</p>
                 </div>
             </div>
@@ -84,13 +84,13 @@
                         <p class="text-center monthly-equivalent" style="opacity: 0">(0 Kč za měsíc<sup>*</sup>)</p>
                         <div class="px-3 d-flex justify-content-center premium-card-btn-div">
                             <% if (!currentUser) { %>
-                                <a href="/auth/user/new" class="btn btn-danger my-3 w-100">Zaregistrovat se a aktivovat</a> 
+                                <a href="/auth/user/new" class="btn btn-warning my-3 w-100">Zaregistrovat se a aktivovat</a> 
                             <% } %>
                             <% if (currentUser && !currentUser.isPremium) { %>
-                                <a href="#" id="checkout-button-freemium" class="btn btn-danger my-3 disabled w-100" style="min-width:115px">Balíček Free je aktivní</a> 
+                                <a href="#" id="checkout-button-freemium" class="btn btn-warning my-3 disabled w-100" style="min-width:115px">Balíček Free je aktivní</a> 
                             <% } %>
                             <% if (currentUser && currentUser.isPremium) { %>
-                                <a href="#" class="btn btn-danger my-3 disabled w-100">Je aktivní balíček Premium</a> 
+                                <a href="#" class="btn btn-warning my-3 disabled w-100">Je aktivní balíček Premium</a> 
                             <% } %>
                         </div>
                         <div class="height-85 premium-card-info-div">
@@ -146,13 +146,13 @@
                         <p class="text-center monthly-equivalent">(229 Kč za měsíc)</p>
                         <div class="px-3 d-flex justify-content-center premium-card-btn-div">
                             <% if (!currentUser) { %>
-                                <a href="/auth/user/new?premium=true" class="btn btn-danger my-3 w-100">Zaregistrovat se a aktivovat</a> 
+                                <a href="/auth/user/new?premium=true" class="btn btn-warning my-3 w-100">Zaregistrovat se a aktivovat</a> 
                             <% } %>
                             <% if (currentUser && !currentUser.isPremium) { %>
-                                <a href="#" id="checkout-button-monthly" class="btn btn-danger my-3 w-100" style="min-width:115px">Aktivovat</a> 
+                                <a href="#" id="checkout-button-monthly" class="btn btn-warning my-3 w-100" style="min-width:115px">Aktivovat</a> 
                             <% } %>
                             <% if (currentUser && currentUser.isPremium) { %>
-                                <a href="#" class="btn btn-danger my-3 disabled w-100">Je aktivní balíček Premium</a> 
+                                <a href="#" class="btn btn-warning my-3 disabled w-100">Je aktivní balíček Premium</a> 
                             <% } %>
                         </div>
                         <% if (currentUser && currentUser.premiumGrantedByAdmin) { %>
@@ -231,13 +231,13 @@
                         <p class="text-center monthly-equivalent">(149 Kč za měsíc<sup>*</sup>)</p>
                         <div class="px-3 d-flex justify-content-center premium-card-btn-div">
                             <% if (!currentUser) { %>
-                                <a href="/auth/user/new?premium=true" class="btn btn-danger my-3 w-100">Zaregistrovat se a aktivovat</a> 
+                                <a href="/auth/user/new?premium=true" class="btn btn-warning my-3 w-100">Zaregistrovat se a aktivovat</a> 
                             <% } %>
                             <% if (currentUser && !currentUser.isPremium) { %>
-                                <a href="#" id="checkout-button-halfyear" class="btn btn-danger my-3 w-100" style="min-width:115px">Aktivovat</a> 
+                                <a href="#" id="checkout-button-halfyear" class="btn btn-warning my-3 w-100" style="min-width:115px">Aktivovat</a> 
                             <% } %>
                             <% if (currentUser && currentUser.isPremium) { %>
-                                <a href="#" class="btn btn-danger my-3 disabled w-100">Je aktivní balíček Premium</a> 
+                                <a href="#" class="btn btn-warning my-3 disabled w-100">Je aktivní balíček Premium</a> 
                             <% } %>
                         </div>
                         <% if (currentUser && currentUser.premiumGrantedByAdmin) { %>
@@ -325,13 +325,13 @@
                         <p class="text-center monthly-equivalent">(124 Kč za měsíc<sup>*</sup>)</p>
                         <div class="px-3 d-flex justify-content-center premium-card-btn-div">
                             <% if (!currentUser) { %>
-                                <a href="/auth/user/new?premium=true" class="btn btn-danger my-3 w-100">Zaregistrovat se a aktivovat</a> 
+                                <a href="/auth/user/new?premium=true" class="btn btn-warning my-3 w-100">Zaregistrovat se a aktivovat</a> 
                             <% } %>
                             <% if (currentUser && !currentUser.isPremium) { %>
-                                <a href="#" id="checkout-button-yearly" class="btn btn-danger my-3 w-100" style="min-width:115px">Aktivovat</a> 
+                                <a href="#" id="checkout-button-yearly" class="btn btn-warning my-3 w-100" style="min-width:115px">Aktivovat</a> 
                             <% } %>
                             <% if (currentUser && currentUser.isPremium) { %>
-                                <a href="#" class="btn btn-danger my-3 disabled w-100">Je aktivní balíček Premium</a> 
+                                <a href="#" class="btn btn-warning my-3 disabled w-100">Je aktivní balíček Premium</a> 
                             <% } %>
                         </div>
                         <% if (currentUser && currentUser.premiumGrantedByAdmin) { %>
@@ -409,7 +409,7 @@
                     <p class=" text-center text-small pt-3 mb-0"><sup>*</sup> Předplatné je placeno vždy za celé zvolené obdobní najednou.</b></p>
                     <p class=" text-center text-small pb-5"><sup>**</sup> Ve srovnání s měsíčním předplatným.</b></p>
                     <% if (currentUser && currentUser.isEditor && !currentUser.isPremium) { %>
-                        <a href="#" id="checkout-button-daily" class="btn btn-sm btn-danger my-3" style="min-width:115px">Aktivovat denní předplatné (testovací)</a> 
+                        <a href="#" id="checkout-button-daily" class="btn btn-sm btn-warning my-3" style="min-width:115px">Aktivovat denní předplatné (testovací)</a> 
                     <% } %>
                 </div>
             </div>
