--- a/views/questions/finished.ejs
+++ b/views/questions/finished.ejs
@@ -71,14 +71,14 @@
                 <% if (!currentUser.isPremium && currentUser.questionsSeenThisMonth > 50) { %>
                     <div class="row mt-3">
                         <div class="col-12">
-                            <h5 class="mb-3">Otázky zdarma byly vyčerpány</h5>
+                            <h5 class="mb-3">Získej neomezený přístup k testovým otázkám</h5>
                             <p>Pro tento měsíc jsi vyčerpal/a svých 50 testových otázek dostupných zdarma.</p>
                             <p>Aktivuj si předplatné Premium <b>s neomezeným počtem otázek</b> nebo počkej do prvního dne následujícího měsíce na dalších 50 otázek zdarma.</p>
                         </div>
                     </div>
                     <div class="row mb-3 mt-3">
                         <div class="col-12">
-                            <a href="/premium" class="btn btn-danger">Zjistit více</a>
+                            <a href="/premium" class="btn btn-danger">Chci studovat bez omezení</a>
                         </div>
                     </div>
                 <% } else { %>
@@ -100,7 +100,7 @@
                                 <p class="mb-0 grey-highlight px-3 py-2">Na tento balíček nenavazuje žádný jiný balíček.</p>
                             </div>
                         <% } %>
-                        <% if (!currentUser.isPremium && nextSection.isPremium) { %>
+                        <% if (!currentUser.isPremium && nextSection && nextSection.isPremium) { %>
                             <div class="d-flex flex-column justify-content-center align-items-center mt-3">
                                 <h5 class="mb-0">Navazující balíček</h5>
                                 <p class="mb-3"><%= nextSection.name %></p>
