--- a/views/questions/show.ejs
+++ b/views/questions/show.ejs
@@ -49,7 +49,12 @@
                 class="fas fa-chevron-left me-2 mb-2"></i>Zpět na předmět</a></li>
           <li>
             <p class="m-0"><small id="sectionId" name="<%= section._id %>" cat="<%= section.category %>">
-                <span class="nezobrazovat-na-mobilu"><%= section.name %></span>
+              <span class="nezobrazovat-na-mobilu d-flex align-items-center">
+                <span><%= section.name %></span>
+                <% if (section.isPremium) { %>
+                  <span class="badge bg-warning color-text text-normal mx-1"><i class="fas fa-crown text-tiny" title="Premium balíček"></i></span>
+                <% } %>
+            </span>
             </p></small>
           </li>
         </ul>
@@ -97,6 +102,9 @@
                         <div class="card-text m-4 text-center"><div class='spinner-border' role='status'><span class='visually-hidden'>Loading...</span></div></div>
                     </div>
                 </div>
+                <% if (currentUser && !currentUser.isPremium) { %>
+                  <div class="d-flex justify-content-center align-items-center opacity-0" id="free-questions-text"><span class="text-small text-muted text-center">V rámci balíčku Free máš tento měsíc k dispozici ještě <span id="free-questions-left" name="<%= 50 - currentUser.questionsSeenThisMonth %>"><%= 50 - currentUser.questionsSeenThisMonth %></span> <span id="free-questions-ending">testových otázek</span>. <a href="#" data-bs-toggle="modal" data-bs-target="#premiumInfo">Více...</a></span></div>
+                <% } %>
             </div>
         </div>
 
@@ -165,6 +173,32 @@
         </div>
       </div>
     </main>
+
+    <% if(currentUser && !currentUser.isPremium){ %>
+      <!-- MODAL - App Anouncement with script -->
+      <div class="modal fade" id="premiumInfo" tabindex="-1">
+          <div class="modal-dialog modal-dialog-centered edit-modal">
+          <div class="modal-content">
+              <div class="modal-body">
+                  <div class="d-flex justify-content-between w-100">
+                      <div></div>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                  </div>
+                  <h4 class="text-center mt-3 mb-4">Získej neomezený přístup k testovým otázkám</h4>
+
+                  <div class="text-center mt-4">
+                    <p>Každý měsíc máš od nás 50 testových otázek <span class="color-1"><b>zdarma</b></span>. Můžeš si však aktivovat předplatné <span class="color-1"><b>Premium</b></span>, se kterým získáš přístup k více než 4 000 testových otázek <span class="color-1"><b>bez omezení</b></span>.</p>
+                  </div>
+                  <div>
+                    <div class="d-flex justify-content-center mt-4 mb-3">
+                      <a href="/premium" target="_blank" class="btn btn-danger btn-lg">Chci studovat bez omezení</a>
+                    </div>
+                  </div>
+              </div>
+          </div>
+          </div>
+      </div>
+    <% } %>
 
     <%- include('../partials/footer') %>
       <!-- JS for Bootstrap -->
