--- a/views/sections/finishedLive.ejs
+++ b/views/sections/finishedLive.ejs
@@ -1,5 +1,5 @@
 <% layout ('layouts/boilerplate.ejs')  %> 
-<div class="container">
+<div class="container mb-4">
     <div class="row">
         <div class="col-lg-6 col-12 offset-lg-3">
             <div class="card text-center p-4">
@@ -10,36 +10,27 @@
                 </div>
                 <div class="row">
                     <div class="col-12 mt-4 mb-3">
-                        <h3>Hotovo </h3>
-                        <h5>Skvělá práce!</h5>
+                        <% if (knowsAll) { %>
+                            <h4>Dokončeno </h4>
+                        <% } else { %>
+                            <h4>Dobrá práce </h4>
+                        <% } %>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12">
                         <div class="d-flex justify-content-center align-items-center">
-                            <p class="grey-highlight px-3 py-2">Celkem máš nastudováno už <span class="color-1"><b><%= currentUser.cardsSeen %></b></span> kartiček.</p> 
+                            <% if (knowsAll) { %>
+                                <p class="grey-highlight px-3 py-2">Umíš <span class="color-1"><b>všechny</b></span> kartičky z tohoto balíčku.</p>
+                            <% } else { %>
+                                <p class="grey-highlight px-3 py-2">Umíš <span class="color-1"><b><%= knownCards %></b></span> z <span class="color-1"><b><%= cardsTotal %></b></span> kartiček v tomto balíčku.</p> 
+                            <% } %>
                         </div>
                     </div>
-                </div>
-                <div class="row">
                     <div class="col-12">
-                        <p class="mb-0">Jaká byla kvalita kartiček v tomto balíčku?</p>
-                        <div id="rating-type" name="cards"></div>
-                        <form class="d-flex justify-content-center" id="rating-form" name="<%= section._id %>">
-                            <div class="rate">
-                                <input class="radio-btn-rating" type="radio" id="star5" name="rate" value="5" />
-                                <label for="star5" title="text">5 stars</label>
-                                <input class="radio-btn-rating" type="radio" id="star4" name="rate" value="4" />
-                                <label for="star4" title="text">4 stars</label>
-                                <input class="radio-btn-rating" type="radio" id="star3" name="rate" value="3" />
-                                <label for="star3" title="text">3 stars</label>
-                                <input class="radio-btn-rating" type="radio" id="star2" name="rate" value="2" />
-                                <label for="star2" title="text">2 stars</label>
-                                <input class="radio-btn-rating" type="radio" id="star1" name="rate" value="1" />
-                                <label for="star1" title="text">1 star</label>
-                            </div>
-                        </form>
-                        <a href="#" data-bs-toggle="modal" data-bs-target="#text-feedback-modal" class="text-smaller hidden" id="text-feedback-link">Přidat slovní hodnocení</a>
+                        <div class="d-flex justify-content-center align-items-center">
+                            <p class="grey-highlight px-3 py-2">Celkem máš nastudováno už <span class="color-1"><b><%= currentUser.cardsSeen %></b></span> kartiček.</p> 
+                        </div>
                     </div>
                 </div>
                 <% if (section.questions.length > 0 && section.testIsPublic) { %>
@@ -61,7 +52,7 @@
                     </div>
                     <div class="row mt-3">
                         <div class="col-12">
-                            <a href="/category/<%= category%>/section/<%= section._id%>/card30/repeatSection" class="btn btn-danger mb-4"><i class="fas fa-redo"></i></a>
+                            <a href="/category/<%= category%>/section/<%= section._id%>/card30/1?mode=unknown" class="btn btn-danger mb-4"><i class="fas fa-redo"></i></a>
                             <a href="/category/<%= category%>/" class="btn btn-danger mb-4">Zpět na kategorii</a>
                         </div>
                     </div>
@@ -80,10 +71,10 @@
                                 <div class="d-flex justify-content-center align-items-center">
                                     <p class="mb-4 grey-highlight px-3 py-2">Navazující balíček je přístupný jen <br>s <b>předplatným Premium</b>.</p>
                                 </div>
-                                <a href="/category/<%= category%>/section/<%= section._id%>/card30/repeatSection" class="btn btn-danger mb-4"><i class="fas fa-redo"></i></a>
+                                <a href="/category/<%= category%>/section/<%= section._id%>/card30/1?mode=unknown" class="btn btn-danger mb-4"><i class="fas fa-redo"></i></a>
                                 <a href="/premium" class="btn btn-danger mb-4">Zjistit více</a>
                             <% } else { %>
-                                <a href="/category/<%= category%>/section/<%= section._id%>/card30/repeatSection" class="btn btn-danger mb-4"><i class="fas fa-redo"></i></a>
+                                <a href="/category/<%= category%>/section/<%= section._id%>/card30/1?mode=unknown" class="btn btn-danger mb-4"><i class="fas fa-redo"></i></a>
                                 <a href="/category/<%= category%>/section/<%= section.nextSection%>/card30/1" class="btn btn-danger mb-4">Pokračovat na další balíček</a>
                             <% } %>
                         </div>
@@ -92,6 +83,27 @@
                         </div>
                     </div>
                 <% } %>
+                <div class="row">
+                    <div class="col-12">
+                        <p class="mb-0">Jaká byla kvalita kartiček v tomto balíčku?</p>
+                        <div id="rating-type" name="cards"></div>
+                        <form class="d-flex justify-content-center" id="rating-form" name="<%= section._id %>">
+                            <div class="rate">
+                                <input class="radio-btn-rating" type="radio" id="star5" name="rate" value="5" />
+                                <label for="star5" title="text">5 stars</label>
+                                <input class="radio-btn-rating" type="radio" id="star4" name="rate" value="4" />
+                                <label for="star4" title="text">4 stars</label>
+                                <input class="radio-btn-rating" type="radio" id="star3" name="rate" value="3" />
+                                <label for="star3" title="text">3 stars</label>
+                                <input class="radio-btn-rating" type="radio" id="star2" name="rate" value="2" />
+                                <label for="star2" title="text">2 stars</label>
+                                <input class="radio-btn-rating" type="radio" id="star1" name="rate" value="1" />
+                                <label for="star1" title="text">1 star</label>
+                            </div>
+                        </form>
+                        <a href="#" data-bs-toggle="modal" data-bs-target="#text-feedback-modal" class="text-smaller hidden" id="text-feedback-link">Přidat slovní hodnocení</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
