--- a/views/admin/showUserDetail.ejs
+++ b/views/admin/showUserDetail.ejs
@@ -328,6 +328,40 @@
                 <div class="row p-3 pb-3">
                     <div class="col-12 d-flex align-items-center">
                         <div class="rounded-circle icon-background d-flex justify-content-center align-items-center">
+                            <img src="/img/icon_target.png" class="img-fit" alt="">
+                        </div>
+                        <div>
+                            <h3 class="px-3">Mobilní notifikace</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="row p-3">
+                    <div class="col-md-6 col-12">
+                        <form action="/notifications/sendNotification/<%= user._id %>" method="POST">
+                            <div class="form-group">
+                                <label for="title">Nadpis</label>
+                                <input type="text" class="form-control form-borders" id="title" name="title" required />
+                            </div>
+                            <div class="form-group mt-2">
+                                <label for="body">Text</label>
+                                <input type="text" class="form-control form-borders" id="body" name="body" required />
+                            </div>
+                            <button class="btn btn-danger mt-3">Odeslat notifikaci</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-lg-8 offset-lg-2">
+            <div class="card profile-card">
+                <div class="row p-3 pb-3">
+                    <div class="col-12 d-flex align-items-center">
+                        <div class="rounded-circle icon-background d-flex justify-content-center align-items-center">
                             <img src="/img/icon_invoice.png" class="img-fit" alt="">
                         </div>
                         <div>
