--- a/views/questions/show.ejs
+++ b/views/questions/show.ejs
@@ -102,6 +102,10 @@
                         <div class="card-text m-4 text-center"><div class='spinner-border' role='status'><span class='visually-hidden'>Loading...</span></div></div>
                     </div>
                 </div>
+                <div class="d-flex justify-content-center align-items-center">
+                  <a href="#" class="color-text hide" id="sourceCardIcon" data-bs-toggle="modal" data-bs-target="#sourceCard"><i class="fas fa-graduation-cap"></i></a>
+                  <a href="#" class="disabled-modal-link" id="sourceCardIconPlaceholder"><i class="fas fa-graduation-cap"></i></a>
+                </div>
                 <% if (currentUser && !currentUser.isPremium) { %>
                   <div class="d-flex justify-content-center align-items-center opacity-0" id="free-questions-text"><span class="text-small text-muted text-center">V rámci balíčku Free máš tento měsíc k dispozici ještě <span id="free-questions-left" name="<%= 50 - currentUser.questionsSeenThisMonth %>"><%= 50 - currentUser.questionsSeenThisMonth %></span> <span id="free-questions-ending">testových otázek</span>. <a href="#" data-bs-toggle="modal" data-bs-target="#premiumInfo">Více...</a></span></div>
                 <% } %>
@@ -137,7 +141,7 @@
       </div>
       
       <!--BACK CARD MENU-->
-      <div class="row hide" id="back-menu-row">
+      <div class="row" id="back-menu-row">
         <div class="col-lg-6 offset-lg-2">
           <div class="back-menu d-flex justify-content-between align-items-center border-grey">
             <div id="star-div">
@@ -199,6 +203,32 @@
           </div>
       </div>
     <% } %>
+
+    <!-- MODAL - sourceCard -->
+    <div class="modal fade" id="sourceCard" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered edit-modal">
+        <div class="modal-content">
+            <div class="modal-body mb-4">
+                <div class="d-flex justify-content-between w-100">
+                    <div></div>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <h4 class="text-center mt-3 mb-3">Kartička</h4>
+                <div class="row">
+                  <div class="col-12 px-3 px-sm-5">
+                    <div id="sourceCardFront" class="mt-3 px-1 px-md-4" style="text-align: center; font-style: italic;">
+
+                    </div>
+                    <hr />
+                    <div id="sourceCardBack" class="mt-3 px-1 px-md-4">
+
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
 
     <%- include('../partials/footer') %>
       <!-- JS for Bootstrap -->
