--- a/views/category.ejs
+++ b/views/category.ejs
@@ -110,7 +110,7 @@
                                             <% } %>
                                         </div>
                                         <div>
-                                            <% if (section.isPremium && (!currentUser || !currentUser.isPremium || !currentUser.isEditor)) { %> 
+                                            <% if (section.isPremium && (!currentUser || !currentUser.isPremium)) { %> 
                                                 <a href="/premium" class="btn btn-sm btn-warning btn-spustit w-100 mt-2"><i class="fas fa-crown text-small"></i> Premium</a>
                                             <% } else if (section.cards.length > 0) { %>
                                                 <a href="/category/<%= category.name %>/section/<%= section._id %>/card30/1?mode=unknown" class="btn btn-sm btn-danger btn-spustit w-100 mt-2">Spustit</a>
@@ -137,7 +137,7 @@
                                             <% } %>
                                         </div>
                                         <div>
-                                            <% if (section.isPremium && (!currentUser || !currentUser.isPremium || !currentUser.isEditor)) { %> 
+                                            <% if (section.isPremium && (!currentUser || !currentUser.isPremium)) { %> 
                                                 <a href="/premium" class="btn btn-sm btn-warning btn-spustit w-100 mt-2"><i class="fas fa-crown text-small"></i> Premium</a>
                                             <% } else if (section.questions.length > 0) { %>
                                                 <a href="/category/<%= category._id %>/section/<%= section._id %>/test" class="btn btn-sm btn-danger btn-spustit w-100 mt-2">Spustit</a>
